--- a/css/style.css
+++ b/css/style.css
@@ -25,12 +25,12 @@ header .navbar {
 	outline: none;
   font-family: 'Verdana';
 }
-.navbar .navbar-brand h2 {
+h2 {
 	color: #fff;
 	font-size: 24px;
 	font-weight: 700;
 }
-.navbar .navbar-brand h2 em {
+em {
 	font-style: normal;
 	color: #8206ff;
 }
@@ -190,4 +190,177 @@ input {
 	font-size: 13px;
 	color: #8206ff;
 	font-weight: 500;
+}
+
+
+footer {
+    background-color: black;
+    font-family: "Lato", sans-serif;
+    padding: 85px 0 285px 0;
+}
+
+.footer-inner {
+    width: 90%;
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: 120px;
+    max-width: 1170px;
+    position: relative;
+}
+
+.footer-item {
+    float: left;
+    margin: 0 7.2% 0 0;
+}
+
+.footer-item:nth-of-type(4) {
+    display: none;
+}
+
+.footer-item:nth-of-type(7) {
+    float: right;
+    margin-right: 0;
+}
+
+.footer-button {
+    color: white;
+    position: relative;
+    font-weight: 400;
+    font-size: 16px;
+    transition: 1s;
+    transition-delay: .2s;
+    padding: 14px;
+}
+
+.footer-button:after {
+    content: "";
+    position: absolute;
+    top: 45px;
+    right: 13px;
+    background-color: white;
+    height: 1px;
+    width: 86px;
+    transition: .6s;
+}
+
+.footer-button:hover {
+    color: black;
+    background-color: white;
+}
+
+.footer-button:hover:after {
+    width: 112px;
+    right: 0px;
+}
+
+h3 {
+    font-weight: 300;
+    line-height: 1.8;
+    font-size: 13px;
+    color: #d1d1d1;
+    letter-spacing: 0.03em;
+    padding: 15px 0 0 0;
+}
+
+.color {
+    color: white;
+    font-weight: 400;
+}
+
+ul {
+    line-height: 1.8;
+    list-style-type: none;
+    padding: 0;
+}
+
+li {
+    font-weight: 300;
+    font-size: 13px;
+    color: #d1d1d1;
+    letter-spacing: 0.03em;
+}
+
+p {
+    font-weight: 300;
+    font-size: 13px;
+    padding: 0;
+    line-height: 1.8;
+    letter-spacing: 0.03em;
+}
+
+a {
+    text-decoration: none;
+    color: #d1d1d1;
+}
+
+a:hover {
+    color: white;
+}
+
+.desktop {
+    display: auto;
+}
+
+.footer-inner:after {
+    content: "© 2020 Original Trombone. All Rights Reserved.";
+    font-weight: 300;
+    letter-spacing: 0.03em;
+    font-size: 13px;
+    color: #d1d1d1;
+    position: absolute;
+    top: 260px;
+    clear: both;
+    display: block;
+}
+
+@media (max-width: 1024px) {
+
+footer {
+    padding: 50px 0 70px 0 !important;
+}
+
+.footer-inner {
+    border-bottom: 1px solid #333;
+    padding-bottom: 490px;
+    margin-bottom: 50px;
+}
+
+.footer-item {
+    margin: 0 0 42px 0;
+    width: 50%;
+}
+
+.footer-item:nth-of-type(1) {
+    border-bottom: 1px solid #333;
+    padding-bottom: 32px;
+    float: none;
+    width: 100%;
+}
+
+.footer-item:nth-of-type(2) {
+    clear: both;
+}
+
+.footer-item:nth-of-type(4) {
+    clear: both;
+    display: block;
+}
+
+.footer-item:nth-of-type(6) {
+    clear: both;
+}
+
+.footer-item:nth-of-type(7) {
+    clear: both;
+    float: left;
+    margin: 20px 0 0 -13px;
+}
+
+.desktop {
+    display: none;
+}
+
+.footer-inner:after {
+    top: 730px;
+}
 }
